Bug 313120 - Transform Tool cursors are wrong when the canvas is rotated
Summary: Transform Tool cursors are wrong when the canvas is rotated
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-12 08:04 UTC by Dmitry Kazakov
Modified: 2013-01-23 13:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2013-01-12 08:04:50 UTC
subj
Comment 1 Dmitry Kazakov 2013-01-23 13:25:47 UTC
Git commit 2593548d314d0567e309e80f4596937b477d0585 by Dmitry Kazakov.
Committed on 23/01/2013 at 14:25.
Pushed by dkazakov into branch 'krita-fixed-transform-kazakov'.

Fix cursors for the transform tool when the canvas is rotated

M  +42   -54   krita/plugins/tools/tool_transform2/kis_tool_transform.cc
M  +5    -3    krita/plugins/tools/tool_transform2/kis_tool_transform.h

http://commits.kde.org/calligra/2593548d314d0567e309e80f4596937b477d0585