Fix cursors for the transform tool when the canvas is rotated

BUG:313120